# Outcast-25

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  goals.txt  main.cpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Game/: CMakeLists.txt  main.cpp
include/: IconsCodicons.h  UI.h  background.h  button.h  command.h  constant.h  environment.h  file_dialogs.h  file_explorer.h  game.h  game_object.h  game_state.h  game_state_machine.h  input_handler.h  layer.h  loader_params.h  menu_state.h  play_state.h  player.h  scene.h  sdl_game_object.h  texture_manager.h  vector2D.h  work_state.h
python_binding_src/: Button.py  Game.py  Player.py  TextureManager.py  tempCodeRunnerFile.py
python_binding_src/test/: BouncingBall.py  Constant.py  test.py
src/: GameObject.py  GameState.py  GameStateMachine.py  MenuState.py  PlayState.py  Player.py  TextureManager.py  UI.cpp  Vector2D.py  background.cpp  button.cpp  command.cpp  file_dialogs.cpp  file_explorer.cpp  game.cpp  game_state_machine.cpp  input_handler.cpp  layer.cpp  main.cpp  main.py  menu_state.cpp  play_state.cpp  player.cpp  sdl_game_object.cpp  texture_manager.cpp  vector2D.cpp  work_state.cpp
src/AutoGPT/: ai_function.py
src/test/: Arrow.py  Heart.py  tempCodeRunnerFile.py
src_py/: Constant.py  InputHandler.py
src_py/test/: Circle.py  LissajousCurve.py
